[tool.poetry]
name = "s3"
version = "0.1.0"
description = "S3 related AWS and Minio logic."
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
minio = "7.0.3"
boto3 = "1.20.26"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
